--- a/_config.yml
+++ b/_config.yml
@@ -85,4 +85,5 @@ exclude_generator:
 # Deployment
 ## Docs: http://hexo.io/docs/deployment.html
 deploy:
-  type:
+  type: github
+  repo: git@github.com:stoggi/stoggi.github.io.git
